[package]
name = "dungeon-master"
version = "0.1.0"
authors = ["xipi2048 <raen@quantumtrip.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["pancurses-backend"]