[package]
name = "rusty-gm"
version = "0.1.0"
authors = ["xipi2048 <raen@quantumtrip.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4.0"
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"