[package]
name = "rusty-gm"
version = "0.1.0"
authors = ["xipi2048 <raen@quantumtrip.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin-renderer = "0.3.1"
skulpin-app-winit = "0.3.0"
skulpin-plugin-imgui = "0.4.0"
skulpin-renderer-winit = "0.3.1"

skulpin = { version = "0.9.5", default-features = false, features = ["skulpin_winit", "skia_complete"] }